--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
       - run:
           name: Archiving build logs.
           command: |
-             tar zcvf build/<<parameters.arch>>/<<parameters.target>>/logs.tar.gz $(find build/ -name "*.log")
+            tar zcvf build/<<parameters.arch>>/<<parameters.target>>/logs.tar.gz $(find build/ -name "*.log")
       - run:
           name: Output build failing logs
           command: |
@@ -49,7 +49,6 @@ jobs:
             apt update
             apt install -y build-essential zlib1g-dev uuid-dev libdigest-sha-perl libelf-dev bc bzip2 bison flex git gnupg gawk iasl m4 nasm patch python python2 python3 wget gnat cpio ccache pkg-config cmake libusb-1.0-0-dev autoconf texinfo ncurses-dev doxygen graphviz udev libudev1 libudev-dev automake libtool rsync innoextract sudo imagemagick libncurses5-dev
       - checkout
-
       - run:
           name: git reset
           command: |
@@ -63,7 +62,7 @@ jobs:
       - run:
           name: Creating all modules and patches digest (All modules cache digest)
           command: |
-            find ./Makefile ./patches/ ./modules/ -type f | sort -h |xargs sha256sum > ./tmpDir/all_modules_and_patches.sha256sums \
+            find ./Makefile ./patches/ ./modules/ -type f | sort -h | xargs sha256sum > ./tmpDir/all_modules_and_patches.sha256sums \
 
       - run:
           name: Creating coreboot (and associated patches) and musl-cross-make modules digest (musl-cross-make and coreboot cache digest)
@@ -157,7 +156,7 @@ jobs:
           at: ~/
       - build_board:
           arch: <<parameters.arch>>
-          target: <<parameters.target>> 
+          target: <<parameters.target>>
           subcommand: <<parameters.subcommand>>
 
   save_cache:
@@ -172,34 +171,38 @@ jobs:
           #CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
           key: nix-heads-musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
-            - crossgcc
-            - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
+            - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
+            - crossgcc
             - packages
       - save_cache:
           #Generate cache for the same coreboot mnd musl-cross-make modules definition if hash is not previously existing
           #CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
           key: nix-heads-coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
-            - crossgcc
-            - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
+            - build/ppc64/coreboot-talos_2
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
-            - packages
             - build/x86/coreboot-4.11
             - build/x86/coreboot-4.13
             - build/x86/coreboot-4.14
             - build/x86/coreboot-4.15
             - build/x86/coreboot-4.17
             - build/x86/coreboot-4.19
-            - build/ppc64/coreboot-git
+            - build/x86/coreboot-dasharo-kgpe-d16
+            - build/x86/coreboot-nitrokey
+            - build/x86/coreboot-purism
+            - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
+            - crossgcc
+            - packages
+
       - save_cache:
           #Generate cache for the exact same modules definitions if hash is not previously existing
           key: nix-heads-modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
-            - crossgcc
             - build
-            - packages
+            - crossgcc
             - install
+            - packages
 
 workflows:
   version: 2
@@ -251,8 +254,8 @@ workflows:
       #Cache one workspace per architecture. Make sure workspace caches are chainloaded and the last in chain for an arch is saved.
       - save_cache:
           requires:
+            - librem_14
             - talos-2
-            - nitropad-nv41
 
 #
 #
@@ -406,15 +409,15 @@ workflows:
           target: UNTESTED_w530-dgpu-K1000m-hotp-maximized
           subcommand: ""
           requires:
-            - x230-hotp-maximized  
+            - x230-hotp-maximized
 
       - build:
           name: UNTESTED_w530-dgpu-K2000m-hotp-maximized
           target: UNTESTED_w530-dgpu-K2000m-hotp-maximized
           subcommand: ""
           requires:
-            - x230-hotp-maximized  
-            
+            - x230-hotp-maximized
+
       - build:
           name: t430-maximized
           target: t430-maximized
@@ -462,7 +465,7 @@ workflows:
           target: t440p-maximized
           subcommand: ""
           requires:
-            - x230-hotp-maximized 
+            - x230-hotp-maximized
 
       - build:
           name: t440p-hotp-maximized
@@ -570,7 +573,6 @@ workflows:
           subcommand: ""
           requires:
             - nitropad-nv41
-
 #      - build:
 #          name: UNTESTED_kgpe-d16_workstation-usb_keyboard
 #          target: UNTESTED_kgpe-d16_workstation-usb_keyboard
